<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBackground"
    android:textColor="@color/colorText"
    >

    <RadioGroup
        android:id="@+id/rg_suffix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rb_mr"
            android:text="@string/text_mr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="5dp"
            android:textColor="@color/colorText"
            />

        <RadioButton
            android:id="@+id/rb_ms"
            android:text="@string/text_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="5dp"
            android:textColor="@color/colorText"/>

        <RadioButton
            android:id="@+id/rb_mrs"
            android:text="@string/text_mrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="5dp"
            android:textColor="@color/colorText"/>

        <RadioButton
            android:id="@+id/rb_dr"
            android:text="@string/text_dr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:padding="5dp"
            android:textColor="@color/colorText"/>

    </RadioGroup>


    <LinearLayout
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:textColor="@color/colorText">

        <TextView
            android:id="@+id/text_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/fname"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <EditText
            android:id="@+id/edit_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@color/colorEdit"
            android:padding="10dp"
            android:textColor="@color/colorText"
            android:textSize="17dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/lname"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <EditText
            android:id="@+id/edit_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@color/colorEdit"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/address"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@color/colorEdit"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/province"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <Spinner
            android:id="@+id/spinner_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/country"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <EditText
            android:id="@+id/edit_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@color/colorEdit"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/postal_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:textColor="@color/colorText">

        <TextView
            android:id="@+id/text_postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/postal"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <EditText
            android:id="@+id/edit_postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@color/colorEdit"
            android:padding="10dp"
            android:textSize="17dp"

            android:textColor="@color/colorText"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:padding="5dp"
            android:height="5dp"/>
    </LinearLayout>

</LinearLayout>
