<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorBackground"
    android:textColor="@color/colorText"
    >


    <LinearLayout
        android:id="@+id/suffix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:textColor="@color/colorText">

        <TextView
            android:id="@+id/text_suffix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/suffix"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/edit_suffix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/colorText"
            android:textSize="17dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:textColor="@color/colorText">

        <TextView
            android:id="@+id/text_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/fname"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/edit_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/colorText"
            android:textSize="17dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/lname"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/edit_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/address"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/province"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/edit_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/country"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/edit_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/postal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:textColor="@color/colorText">

        <TextView
            android:id="@+id/text_postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/postal"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/edit_postal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="17dp"
            android:textColor="@color/colorText"/>

    </LinearLayout>

</LinearLayout>
